# TrivialThreadPool

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/: codecov.yml
.github/workflows/: sanitazer.yml  ubuntu.yml
include/ttp/: thread_pool.hpp  unique_function.hpp
test/: CMakeLists.txt  tests.cpp  tests_thread_pool.cpp  tests_unique_function.cpp
